# keeperfx

./: .github_git_safety.md  .github_project_infrastructure.md  .gitignore  .gitmessage  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  IMPLEMENTATION_SUMMARY.md  INVESTIGATION_SUMMARY.md  MODSTUDIO_TRANSFER.md  MOD_FORMAT_README.md  Makefile  README.md  TESTING.md  alsoft.ini  check_macos_deps.sh  compile_commands.json  config.local.mk.template  installer.mk  keeperfx-installer.iss  keeperfx.code-workspace  linux.mk  psp2core-1772799093-0x000a122321-eboot.bin.txt  setup_imgui.ps1  test_vita_cmake.sh  vcpkg.json  ver_defs.h.in  vita.cmake
.devcontainer/: devcontainer.json  fix-git-worktree.sh  fix-intellisense.sh
.devcontainer/linux/: devcontainer.json
.devcontainer/vita/: devcontainer.json
.githooks/: post-checkout  pre-commit  pre-push
.github/: copilot-instructions.md
.github/workflows/: build-alpha-patch-unsigned.yml  build-gog-installer.yml  build-prototype.yml  build-release-patch-unsigned.yml  build-vita.yml  ci-build.yml  ci-homebrew.yml  ci-wasm.yml  docker-publish.yml  release.yml
.local/: FORK_WORKFLOW.md
campgns/keeporig/: achievements.cfg
config/: keeperfx.cfg
config/fxdata/: casino_slabset_addon.toml  crstates.cfg  slabset.toml  terrain.cfg
data/menus/: achievements.json  campaigns_menu.json
docker/: README.md  compose.yml
docker/dk-originals/: Dockerfile
docker/kfx-runtime-assets/: Dockerfile
docker/linux/: Dockerfile
docker/mingw32/: Dockerfile
docker/mingw64/: Dockerfile
docker/vitasdk/: Dockerfile
docker/wasm/: Dockerfile
docs/: ACHIEVEMENT_INTEGRATION_STATUS.md  ACHIEVEMENT_MENU_GUIDE.md  ACHIEVEMENT_NOTIFICATION_SYSTEM.md  ACHIEVEMENT_SUMMARY.md  BUILD_AND_DISTRIBUTION.md  BUILD_PIPELINE_VISUAL.md  BUILD_SYSTEM_VISUAL.md  CI_CD_IMPLEMENTATION.md  CONFIG_IMPLEMENTATION_SUMMARY.md  CONFIG_MIGRATION_GUIDE.md  CONFIG_SYSTEM_ANALYSIS.md  CPP17_COMPATIBILITY.md  CPP_STANDARD_COMPATIBILITY.md  DEPENDENCY_MANAGEMENT.md  GOG_AND_BUILD_INDEX.md  GOG_INTEGRATION_GUIDE.md  GOG_QUICK_REFERENCE.md  HOMEBREW_PORTS.md  IMGUI_INTEGRATION.md  IMGUI_SETUP.md  INSTALLER_BUILD_GUIDE.md  INSTALLER_QUICK_START.md  INTEGRATION_GUIDE.md  LOCAL_CONFIG.md  MACOS_QUICKSTART.md  PHASE1_COMPLETION_SUMMARY.md  PHASE2_ASSET_PROCESSING.md  PLATFORM_COMPARISON.md  STEAM_DEVELOPMENT_GUIDE.md  SUBMODULES.md  UI_ARCHITECTURE_ANALYSIS.md  VITA_IMPLEMENTATION.md  VITA_QUICKSTART.md  VITA_SETUP.md  achievement_system.txt  achievements_design.md  achievements_implementation.md  bgfx_renderer_implementation.md  build_instructions.txt  dev_vita_trophy.md  (+15 more)
lang/: gtext_chi.po  gtext_cht.po  gtext_cze.po  gtext_dut.po  gtext_eng.pot  gtext_fre.po  gtext_ger.po  gtext_ita.po  gtext_jpn.po  gtext_kor.po  gtext_lat.po  gtext_pol.po  gtext_por.po  gtext_rus.po  gtext_spa.po  gtext_swe.po  gtext_ukr.po
res/: keeperfx_stdres.rc
scripts/: README.md  create-issues.ps1  setup-branch-protection.sh
shaders/: README.md  fs_palette.sc  fs_rgba.sc  varying.def.sc  vita_blit_f.cg  vita_blit_f.gxp  vita_blit_v.cg  vita_blit_v.gxp  vs_palette.sc  vs_rgba.sc
shaders/3ds/: README.md  palette_vshader.v.pica
shaders/vita/: README.md  palette_f.cg  palette_v.cg
src/: KeeperSpeechImp.c  achievement_api.c  achievement_api.h  achievement_definitions.c  achievement_definitions.h  achievement_gog.cpp  achievement_gog.hpp  achievement_steam.cpp  achievement_steam.hpp  achievement_tracker.c  achievement_tracker.h  actionpt.c  api.c  ariadne.c  ariadne.h  ariadne_edge.c  ariadne_findcache.c  ariadne_naviheap.c  ariadne_navitree.c  ariadne_points.c  ariadne_regions.c  ariadne_tringls.c  ariadne_wallhug.c  bflib_base_tcp.cpp  bflib_basics.c  bflib_basics.h  bflib_client_tcp.cpp  bflib_coroutine.c  bflib_cpu.c  bflib_cpu_stub.c  bflib_crash.c  bflib_crash.h  bflib_datetm.cpp  bflib_dernc.c  bflib_enet.cpp  bflib_fileio.c  bflib_fileio.h  bflib_filelst.c  bflib_fmvids.cpp  bflib_fmvids.h  (+285 more)
src/audio/: audio_interface.h  audio_ndsp.c  audio_openal.c  audio_switch.c  audio_vita.c  audio_vita.h
src/config_modern/: README.md  config_container.hpp  config_creature_modern.hpp  config_loader.hpp  config_migration_demo.cpp
src/input/: input_3ds.c  input_interface.h  input_sdl.c  input_switch.c  input_vita.c
src/kfx/: memory_system.cpp  memory_system_c.h
src/platform/: IAudioPlatform.h  IPlatform.h  IWindowSystem.h  Platform3DS.cpp  Platform3DS.h  PlatformHomebrewMain.cpp  PlatformLinux.cpp  PlatformLinux.h  PlatformManager.cpp  PlatformManager.h  PlatformSwitch.cpp  PlatformSwitch.h  PlatformVita.cpp  PlatformVita.h  PlatformWindows.cpp  PlatformWindows.h  WindowSystemSDL.cpp  WindowSystemSDL.h  WindowSystemVita.cpp  WindowSystemVita.h  stack_monitor.c  stack_monitor.h  vita_malloc_wrap.c  vita_sce_diag.c  vita_sce_diag.h
src/renderer/: IPostProcessPass.h  IRenderer.h  RenderPass.cpp  RenderPass.h  RenderPassProfiler.cpp  RenderPassProfiler.h  RenderPass_C.h  Renderer3DS.cpp  Renderer3DS.h  RendererHelper.cpp  RendererHelper.h  RendererManager.cpp  RendererManager.h  RendererOpenGL.cpp  RendererOpenGL.h  RendererSoftware.cpp  RendererSoftware.h  RendererVita.cpp  RendererVita.h  renderer_bgfx.c  renderer_citro3d.c  renderer_common.c  renderer_gxm.c  renderer_hardware.c  renderer_interface.h  renderer_software.c
tempfolder/: metadata.json  tempkpr.cfg
tempfolder/tempkpr/: map00001.aptfx  map00001.clm  map00001.lof  map00001.nfo  map00001.slb  map00001.tngfx  map00001.txt  map00001.une  map00002.aptfx  map00002.clm  map00002.lgtfx  map00002.lof  map00002.own  map00002.slb  map00002.slx  map00002.tngfx  map00002.txt  map00002.wib  map00002.wlb  map00003.aptfx  map00003.clm  map00003.lgtfx  map00003.lof  map00003.nfo  (+113 more)
tests/: README.md  tst_config_modern.cpp  tst_example_standalone.cpp
tools/: CMakeLists.txt  clion-build-deploy.ps1  init-deploy.ps1  psp2core-1772792105-0x0022ce3e4d-eboot.bin.txt  psp2core-1772794719-0x0021ef288b-eboot.bin.txt  setup-hooks.ps1  sync-repos.ps1  upstream-pr.ps1  vita-companion.sh  vita-diag.ps1  vita-parse-crash.ps1  vita-parse-crash.sh
(+109 files in other folders)
